--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,9 @@ header .address .address-info:focus{
 .footer{
     background-color: #2e2f42;
 }
+.footer .text{
+    background-color: #2e2f42;
+}
 
 .footer .info{
     color: #F4F4FD;
