--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ header .address .address-info:focus{
     background-color: #2e2f42;
 }
 .footer .footer-text{
-    color: #ffffff;
+    color: #2E2F42;
 }
 
 .footer .info{
