update index.html and update style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ header .address .address-info:focus{
 .footer{
     background-color: #2e2f42;
 }
-.footer .footer-text{
+.footer .span{
     color: #2E2F42;
 }
 
