--- a/css/styles.css
+++ b/css/styles.css
@@ -134,10 +134,10 @@ header .address .address-info:focus{
     color:#434455;
 }
 .footer{
-    background-color: #2e2f42;
+    background-color: #2E2F42;
 }
 .footer .span{
-    color: #2e2f42;
+    color: #2E2F42;
 }
 
 .footer .info{
