--- a/css/styles.css
+++ b/css/styles.css
@@ -136,8 +136,8 @@ header .address .address-info:focus{
 .footer{
     background-color: #2E2F42;
 }
-.footer .span{
-    color: #2E2F42;
+.span{
+    color: #2e2f42;
 }
 
 .footer .info{
